feature/config: Multiple language.

--- a/multipleLanguageWebApplication/src/main/resources/application.properties
+++ b/multipleLanguageWebApplication/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+#
+#server.port=9999
+#spring.freemarker.template-loader-path= /templates
+#spring.freemarker.suffix= .ftl
+#spring.freemarker.check-template-location=false
