Config cloud client.

--- a/cloud-config-client/src/main/resources/bootstrap.properties
+++ b/cloud-config-client/src/main/resources/bootstrap.properties
@@ -4,4 +4,6 @@ spring.application.name=app-about-company
 
 # This is the default:
 spring.cloud.config.uri=http://localhost:8888
+
 management.security.enabled=false
+spring.cloud.config.import-check.enabled=false
